flex-col-2 solved setting max-height on large screen and disabling it on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -493,6 +493,7 @@ img {
 }
 
 .flex-col-2 {
+  max-height: 406px;
   flex-basis: 28%;
   transition: 0.15s;
  /* max-height: 405px; */
@@ -502,7 +503,6 @@ img {
 .flex-col-2 img {
   width: 100%;
   height: 100%;
-  /* min-height: 425px; */
   border-radius: 8px;
   object-fit: cover;
   object-position: center;
@@ -718,6 +718,7 @@ img {
 
   .flex-col-1,
   .flex-col-2 {
+    max-height: none;
     margin: 2% 0;
   }
 
